[gd_scene load_steps=4 format=2]

[ext_resource path="res://wow_concept_art_main_menu.png" type="Texture" id=1]
[ext_resource path="res://Title.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 165, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 303.5, 455.125 )
scale = Vector2( 2.07333, 1.56389 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 327, 548 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 123.0
margin_top = 68.0
margin_right = 198.0
margin_bottom = 83.0
rect_scale = Vector2( 5, 5 )
text = "Trash Wins!"

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
margin_left = 74.0
margin_top = 136.0
margin_right = 175.0
margin_bottom = 151.0
rect_scale = Vector2( 5, 5 )
text = "Napalm Wins!"

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
